--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ html, body {
 }
 
 footer {
-    background-color: #f1f1f1;
+    background-color: grey;
     text-align: center;
     padding: 10px 0;
     width: 100%;
